sy.output
Grammaire

    0 $accept: S $end

    1 S: BIBL mc_pgm id '{' DEC INST '}'

    2 BIBL: bib_calcul BIBL
    3     | bib_tab BIBL
    4     | bib_boucle BIBL
    5     | /* vide */

    6 $@1: /* vide */

    7 $@2: /* vide */

    8 DEC: TYPE $@1 NVAR ';' $@2 MOREDEC
    9    | mc_const NVAR ';' MOREDEC

   10 MOREDEC: DEC
   11        | /* vide */

   12 NVAR: VAR MOREVAR

   13 MOREVAR: sp_var NVAR
   14        | /* vide */

   15 VAR: id '[' _entiere ']'

   16 $@3: /* vide */

   17 VAR: id ',' $@3 VAR
   18    | id

   19 TYPE: mc_integer
   20     | mc_real

   21 CST: _entiere
   22    | _reelle

   23 INST: INST_AFF MOREINST
   24     | INST_IF MOREINST
   25     | INST_WHL MOREINST

   26 MOREINST: INST
   27         | /* vide */

   28 INST_AFF: VAR sb_aff EXP1 ';'

   29 EXP1: EXP2 '+' EXP1
   30     | EXP2 '-' EXP1
   31     | EXP2

   32 EXP2: EXP3 '*' EXP2
   33     | EXP3 '/' EXP2
   34     | EXP3

   35 EXP3: VAR
   36     | CST

   37 INST_IF: mc_exec INST mc_if '(' COND ')'

   38 INST_WHL: mc_while '(' COND ')' '{' INST '}'

   39 COND: EXP1 COMPARATEUR EXP1

   40 COMPARATEUR: sb_eg
   41            | sb_diff
   42            | sb_inf
   43            | sb_infeg
   44            | sb_sup
   45            | sb_supeg


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'(' (40) 37 38
')' (41) 37 38
'*' (42) 32
'+' (43) 29
',' (44) 17
'-' (45) 30
'/' (47) 33
';' (59) 8 9 28
'[' (91) 15
']' (93) 15
'{' (123) 1 38
'}' (125) 1 38
error (256)
mc_pgm (258) 1
mc_integer (259) 19
mc_real (260) 20
mc_const (261) 9
mc_if (262) 37
mc_while (263) 38
mc_exec (264) 37
bib_calcul (265) 2
bib_tab (266) 3
bib_boucle (267) 4
sb_eg (268) 40
sb_diff (269) 41
sb_inf (270) 42
sb_infeg (271) 43
sb_sup (272) 44
sb_supeg (273) 45
sb_aff (274) 28
sp_var (275) 13
_entiere (276) 15 21
_reelle (277) 22
id (278) 1 15 17 18


Non-terminaux, suivis des règles où ils apparaissent

$accept (36)
    à gauche: 0
S (37)
    à gauche: 1, à droite: 0
BIBL (38)
    à gauche: 2 3 4 5, à droite: 1 2 3 4
DEC (39)
    à gauche: 8 9, à droite: 1 10
$@1 (40)
    à gauche: 6, à droite: 8
$@2 (41)
    à gauche: 7, à droite: 8
MOREDEC (42)
    à gauche: 10 11, à droite: 8 9
NVAR (43)
    à gauche: 12, à droite: 8 9 13
MOREVAR (44)
    à gauche: 13 14, à droite: 12
VAR (45)
    à gauche: 15 17 18, à droite: 12 17 28 35
$@3 (46)
    à gauche: 16, à droite: 17
TYPE (47)
    à gauche: 19 20, à droite: 8
CST (48)
    à gauche: 21 22, à droite: 36
INST (49)
    à gauche: 23 24 25, à droite: 1 26 37 38
MOREINST (50)
    à gauche: 26 27, à droite: 23 24 25
INST_AFF (51)
    à gauche: 28, à droite: 23
EXP1 (52)
    à gauche: 29 30 31, à droite: 28 29 30 39
EXP2 (53)
    à gauche: 32 33 34, à droite: 29 30 31 32 33
EXP3 (54)
    à gauche: 35 36, à droite: 32 33 34
INST_IF (55)
    à gauche: 37, à droite: 24
INST_WHL (56)
    à gauche: 38, à droite: 25
COND (57)
    à gauche: 39, à droite: 37 38
COMPARATEUR (58)
    à gauche: 40 41 42 43 44 45, à droite: 39


état 0

    0 $accept: . S $end

    bib_calcul  décalage et aller à l'état 1
    bib_tab     décalage et aller à l'état 2
    bib_boucle  décalage et aller à l'état 3

    $défaut  réduction par utilisation de la règle 5 (BIBL)

    S     aller à l'état 4
    BIBL  aller à l'état 5


état 1

    2 BIBL: bib_calcul . BIBL

    bib_calcul  décalage et aller à l'état 1
    bib_tab     décalage et aller à l'état 2
    bib_boucle  décalage et aller à l'état 3

    $défaut  réduction par utilisation de la règle 5 (BIBL)

    BIBL  aller à l'état 6


état 2

    3 BIBL: bib_tab . BIBL

    bib_calcul  décalage et aller à l'état 1
    bib_tab     décalage et aller à l'état 2
    bib_boucle  décalage et aller à l'état 3

    $défaut  réduction par utilisation de la règle 5 (BIBL)

    BIBL  aller à l'état 7


état 3

    4 BIBL: bib_boucle . BIBL

    bib_calcul  décalage et aller à l'état 1
    bib_tab     décalage et aller à l'état 2
    bib_boucle  décalage et aller à l'état 3

    $défaut  réduction par utilisation de la règle 5 (BIBL)

    BIBL  aller à l'état 8


état 4

    0 $accept: S . $end

    $end  décalage et aller à l'état 9


état 5

    1 S: BIBL . mc_pgm id '{' DEC INST '}'

    mc_pgm  décalage et aller à l'état 10


état 6

    2 BIBL: bib_calcul BIBL .

    $défaut  réduction par utilisation de la règle 2 (BIBL)


état 7

    3 BIBL: bib_tab BIBL .

    $défaut  réduction par utilisation de la règle 3 (BIBL)


état 8

    4 BIBL: bib_boucle BIBL .

    $défaut  réduction par utilisation de la règle 4 (BIBL)


état 9

    0 $accept: S $end .

    $défaut  accepter


état 10

    1 S: BIBL mc_pgm . id '{' DEC INST '}'

    id  décalage et aller à l'état 11


état 11

    1 S: BIBL mc_pgm id . '{' DEC INST '}'

    '{'  décalage et aller à l'état 12


état 12

    1 S: BIBL mc_pgm id '{' . DEC INST '}'

    mc_integer  décalage et aller à l'état 13
    mc_real     décalage et aller à l'état 14
    mc_const    décalage et aller à l'état 15

    DEC   aller à l'état 16
    TYPE  aller à l'état 17


état 13

   19 TYPE: mc_integer .

    $défaut  réduction par utilisation de la règle 19 (TYPE)


état 14

   20 TYPE: mc_real .

    $défaut  réduction par utilisation de la règle 20 (TYPE)


état 15

    9 DEC: mc_const . NVAR ';' MOREDEC

    id  décalage et aller à l'état 18

    NVAR  aller à l'état 19
    VAR   aller à l'état 20


état 16

    1 S: BIBL mc_pgm id '{' DEC . INST '}'

    mc_while  décalage et aller à l'état 21
    mc_exec   décalage et aller à l'état 22
    id        décalage et aller à l'état 18

    VAR       aller à l'état 23
    INST      aller à l'état 24
    INST_AFF  aller à l'état 25
    INST_IF   aller à l'état 26
    INST_WHL  aller à l'état 27


état 17

    8 DEC: TYPE . $@1 NVAR ';' $@2 MOREDEC

    $défaut  réduction par utilisation de la règle 6 ($@1)

    $@1  aller à l'état 28


état 18

   15 VAR: id . '[' _entiere ']'
   17    | id . ',' $@3 VAR
   18    | id .

    ','  décalage et aller à l'état 29
    '['  décalage et aller à l'état 30

    $défaut  réduction par utilisation de la règle 18 (VAR)


état 19

    9 DEC: mc_const NVAR . ';' MOREDEC

    ';'  décalage et aller à l'état 31


état 20

   12 NVAR: VAR . MOREVAR

    sp_var  décalage et aller à l'état 32

    $défaut  réduction par utilisation de la règle 14 (MOREVAR)

    MOREVAR  aller à l'état 33


état 21

   38 INST_WHL: mc_while . '(' COND ')' '{' INST '}'

    '('  décalage et aller à l'état 34


état 22

   37 INST_IF: mc_exec . INST mc_if '(' COND ')'

    mc_while  décalage et aller à l'état 21
    mc_exec   décalage et aller à l'état 22
    id        décalage et aller à l'état 18

    VAR       aller à l'état 23
    INST      aller à l'état 35
    INST_AFF  aller à l'état 25
    INST_IF   aller à l'état 26
    INST_WHL  aller à l'état 27


état 23

   28 INST_AFF: VAR . sb_aff EXP1 ';'

    sb_aff  décalage et aller à l'état 36


état 24

    1 S: BIBL mc_pgm id '{' DEC INST . '}'

    '}'  décalage et aller à l'état 37


état 25

   23 INST: INST_AFF . MOREINST

    mc_while  décalage et aller à l'état 21
    mc_exec   décalage et aller à l'état 22
    id        décalage et aller à l'état 18

    $défaut  réduction par utilisation de la règle 27 (MOREINST)

    VAR       aller à l'état 23
    INST      aller à l'état 38
    MOREINST  aller à l'état 39
    INST_AFF  aller à l'état 25
    INST_IF   aller à l'état 26
    INST_WHL  aller à l'état 27


état 26

   24 INST: INST_IF . MOREINST

    mc_while  décalage et aller à l'état 21
    mc_exec   décalage et aller à l'état 22
    id        décalage et aller à l'état 18

    $défaut  réduction par utilisation de la règle 27 (MOREINST)

    VAR       aller à l'état 23
    INST      aller à l'état 38
    MOREINST  aller à l'état 40
    INST_AFF  aller à l'état 25
    INST_IF   aller à l'état 26
    INST_WHL  aller à l'état 27


état 27

   25 INST: INST_WHL . MOREINST

    mc_while  décalage et aller à l'état 21
    mc_exec   décalage et aller à l'état 22
    id        décalage et aller à l'état 18

    $défaut  réduction par utilisation de la règle 27 (MOREINST)

    VAR       aller à l'état 23
    INST      aller à l'état 38
    MOREINST  aller à l'état 41
    INST_AFF  aller à l'état 25
    INST_IF   aller à l'état 26
    INST_WHL  aller à l'état 27


état 28

    8 DEC: TYPE $@1 . NVAR ';' $@2 MOREDEC

    id  décalage et aller à l'état 18

    NVAR  aller à l'état 42
    VAR   aller à l'état 20


état 29

   17 VAR: id ',' . $@3 VAR

    $défaut  réduction par utilisation de la règle 16 ($@3)

    $@3  aller à l'état 43


état 30

   15 VAR: id '[' . _entiere ']'

    _entiere  décalage et aller à l'état 44


état 31

    9 DEC: mc_const NVAR ';' . MOREDEC

    mc_integer  décalage et aller à l'état 13
    mc_real     décalage et aller à l'état 14
    mc_const    décalage et aller à l'état 15

    $défaut  réduction par utilisation de la règle 11 (MOREDEC)

    DEC      aller à l'état 45
    MOREDEC  aller à l'état 46
    TYPE     aller à l'état 17


état 32

   13 MOREVAR: sp_var . NVAR

    id  décalage et aller à l'état 18

    NVAR  aller à l'état 47
    VAR   aller à l'état 20


état 33

   12 NVAR: VAR MOREVAR .

    $défaut  réduction par utilisation de la règle 12 (NVAR)


état 34

   38 INST_WHL: mc_while '(' . COND ')' '{' INST '}'

    _entiere  décalage et aller à l'état 48
    _reelle   décalage et aller à l'état 49
    id        décalage et aller à l'état 18

    VAR   aller à l'état 50
    CST   aller à l'état 51
    EXP1  aller à l'état 52
    EXP2  aller à l'état 53
    EXP3  aller à l'état 54
    COND  aller à l'état 55


état 35

   37 INST_IF: mc_exec INST . mc_if '(' COND ')'

    mc_if  décalage et aller à l'état 56


état 36

   28 INST_AFF: VAR sb_aff . EXP1 ';'

    _entiere  décalage et aller à l'état 48
    _reelle   décalage et aller à l'état 49
    id        décalage et aller à l'état 18

    VAR   aller à l'état 50
    CST   aller à l'état 51
    EXP1  aller à l'état 57
    EXP2  aller à l'état 53
    EXP3  aller à l'état 54


état 37

    1 S: BIBL mc_pgm id '{' DEC INST '}' .

    $défaut  réduction par utilisation de la règle 1 (S)


état 38

   26 MOREINST: INST .

    $défaut  réduction par utilisation de la règle 26 (MOREINST)


état 39

   23 INST: INST_AFF MOREINST .

    $défaut  réduction par utilisation de la règle 23 (INST)


état 40

   24 INST: INST_IF MOREINST .

    $défaut  réduction par utilisation de la règle 24 (INST)


état 41

   25 INST: INST_WHL MOREINST .

    $défaut  réduction par utilisation de la règle 25 (INST)


état 42

    8 DEC: TYPE $@1 NVAR . ';' $@2 MOREDEC

    ';'  décalage et aller à l'état 58


état 43

   17 VAR: id ',' $@3 . VAR

    id  décalage et aller à l'état 18

    VAR  aller à l'état 59


état 44

   15 VAR: id '[' _entiere . ']'

    ']'  décalage et aller à l'état 60


état 45

   10 MOREDEC: DEC .

    $défaut  réduction par utilisation de la règle 10 (MOREDEC)


état 46

    9 DEC: mc_const NVAR ';' MOREDEC .

    $défaut  réduction par utilisation de la règle 9 (DEC)


état 47

   13 MOREVAR: sp_var NVAR .

    $défaut  réduction par utilisation de la règle 13 (MOREVAR)


état 48

   21 CST: _entiere .

    $défaut  réduction par utilisation de la règle 21 (CST)


état 49

   22 CST: _reelle .

    $défaut  réduction par utilisation de la règle 22 (CST)


état 50

   35 EXP3: VAR .

    $défaut  réduction par utilisation de la règle 35 (EXP3)


état 51

   36 EXP3: CST .

    $défaut  réduction par utilisation de la règle 36 (EXP3)


état 52

   39 COND: EXP1 . COMPARATEUR EXP1

    sb_eg     décalage et aller à l'état 61
    sb_diff   décalage et aller à l'état 62
    sb_inf    décalage et aller à l'état 63
    sb_infeg  décalage et aller à l'état 64
    sb_sup    décalage et aller à l'état 65
    sb_supeg  décalage et aller à l'état 66

    COMPARATEUR  aller à l'état 67


état 53

   29 EXP1: EXP2 . '+' EXP1
   30     | EXP2 . '-' EXP1
   31     | EXP2 .

    '+'  décalage et aller à l'état 68
    '-'  décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 31 (EXP1)


état 54

   32 EXP2: EXP3 . '*' EXP2
   33     | EXP3 . '/' EXP2
   34     | EXP3 .

    '*'  décalage et aller à l'état 70
    '/'  décalage et aller à l'état 71

    $défaut  réduction par utilisation de la règle 34 (EXP2)


état 55

   38 INST_WHL: mc_while '(' COND . ')' '{' INST '}'

    ')'  décalage et aller à l'état 72


état 56

   37 INST_IF: mc_exec INST mc_if . '(' COND ')'

    '('  décalage et aller à l'état 73


état 57

   28 INST_AFF: VAR sb_aff EXP1 . ';'

    ';'  décalage et aller à l'état 74


état 58

    8 DEC: TYPE $@1 NVAR ';' . $@2 MOREDEC

    $défaut  réduction par utilisation de la règle 7 ($@2)

    $@2  aller à l'état 75


état 59

   17 VAR: id ',' $@3 VAR .

    $défaut  réduction par utilisation de la règle 17 (VAR)


état 60

   15 VAR: id '[' _entiere ']' .

    $défaut  réduction par utilisation de la règle 15 (VAR)


état 61

   40 COMPARATEUR: sb_eg .

    $défaut  réduction par utilisation de la règle 40 (COMPARATEUR)


état 62

   41 COMPARATEUR: sb_diff .

    $défaut  réduction par utilisation de la règle 41 (COMPARATEUR)


état 63

   42 COMPARATEUR: sb_inf .

    $défaut  réduction par utilisation de la règle 42 (COMPARATEUR)


état 64

   43 COMPARATEUR: sb_infeg .

    $défaut  réduction par utilisation de la règle 43 (COMPARATEUR)


état 65

   44 COMPARATEUR: sb_sup .

    $défaut  réduction par utilisation de la règle 44 (COMPARATEUR)


état 66

   45 COMPARATEUR: sb_supeg .

    $défaut  réduction par utilisation de la règle 45 (COMPARATEUR)


état 67

   39 COND: EXP1 COMPARATEUR . EXP1

    _entiere  décalage et aller à l'état 48
    _reelle   décalage et aller à l'état 49
    id        décalage et aller à l'état 18

    VAR   aller à l'état 50
    CST   aller à l'état 51
    EXP1  aller à l'état 76
    EXP2  aller à l'état 53
    EXP3  aller à l'état 54


état 68

   29 EXP1: EXP2 '+' . EXP1

    _entiere  décalage et aller à l'état 48
    _reelle   décalage et aller à l'état 49
    id        décalage et aller à l'état 18

    VAR   aller à l'état 50
    CST   aller à l'état 51
    EXP1  aller à l'état 77
    EXP2  aller à l'état 53
    EXP3  aller à l'état 54


état 69

   30 EXP1: EXP2 '-' . EXP1

    _entiere  décalage et aller à l'état 48
    _reelle   décalage et aller à l'état 49
    id        décalage et aller à l'état 18

    VAR   aller à l'état 50
    CST   aller à l'état 51
    EXP1  aller à l'état 78
    EXP2  aller à l'état 53
    EXP3  aller à l'état 54


état 70

   32 EXP2: EXP3 '*' . EXP2

    _entiere  décalage et aller à l'état 48
    _reelle   décalage et aller à l'état 49
    id        décalage et aller à l'état 18

    VAR   aller à l'état 50
    CST   aller à l'état 51
    EXP2  aller à l'état 79
    EXP3  aller à l'état 54


état 71

   33 EXP2: EXP3 '/' . EXP2

    _entiere  décalage et aller à l'état 48
    _reelle   décalage et aller à l'état 49
    id        décalage et aller à l'état 18

    VAR   aller à l'état 50
    CST   aller à l'état 51
    EXP2  aller à l'état 80
    EXP3  aller à l'état 54


état 72

   38 INST_WHL: mc_while '(' COND ')' . '{' INST '}'

    '{'  décalage et aller à l'état 81


état 73

   37 INST_IF: mc_exec INST mc_if '(' . COND ')'

    _entiere  décalage et aller à l'état 48
    _reelle   décalage et aller à l'état 49
    id        décalage et aller à l'état 18

    VAR   aller à l'état 50
    CST   aller à l'état 51
    EXP1  aller à l'état 52
    EXP2  aller à l'état 53
    EXP3  aller à l'état 54
    COND  aller à l'état 82


état 74

   28 INST_AFF: VAR sb_aff EXP1 ';' .

    $défaut  réduction par utilisation de la règle 28 (INST_AFF)


état 75

    8 DEC: TYPE $@1 NVAR ';' $@2 . MOREDEC

    mc_integer  décalage et aller à l'état 13
    mc_real     décalage et aller à l'état 14
    mc_const    décalage et aller à l'état 15

    $défaut  réduction par utilisation de la règle 11 (MOREDEC)

    DEC      aller à l'état 45
    MOREDEC  aller à l'état 83
    TYPE     aller à l'état 17


état 76

   39 COND: EXP1 COMPARATEUR EXP1 .

    $défaut  réduction par utilisation de la règle 39 (COND)


état 77

   29 EXP1: EXP2 '+' EXP1 .

    $défaut  réduction par utilisation de la règle 29 (EXP1)


état 78

   30 EXP1: EXP2 '-' EXP1 .

    $défaut  réduction par utilisation de la règle 30 (EXP1)


état 79

   32 EXP2: EXP3 '*' EXP2 .

    $défaut  réduction par utilisation de la règle 32 (EXP2)


état 80

   33 EXP2: EXP3 '/' EXP2 .

    $défaut  réduction par utilisation de la règle 33 (EXP2)


état 81

   38 INST_WHL: mc_while '(' COND ')' '{' . INST '}'

    mc_while  décalage et aller à l'état 21
    mc_exec   décalage et aller à l'état 22
    id        décalage et aller à l'état 18

    VAR       aller à l'état 23
    INST      aller à l'état 84
    INST_AFF  aller à l'état 25
    INST_IF   aller à l'état 26
    INST_WHL  aller à l'état 27


état 82

   37 INST_IF: mc_exec INST mc_if '(' COND . ')'

    ')'  décalage et aller à l'état 85


état 83

    8 DEC: TYPE $@1 NVAR ';' $@2 MOREDEC .

    $défaut  réduction par utilisation de la règle 8 (DEC)


état 84

   38 INST_WHL: mc_while '(' COND ')' '{' INST . '}'

    '}'  décalage et aller à l'état 86


état 85

   37 INST_IF: mc_exec INST mc_if '(' COND ')' .

    $défaut  réduction par utilisation de la règle 37 (INST_IF)


état 86

   38 INST_WHL: mc_while '(' COND ')' '{' INST '}' .

    $défaut  réduction par utilisation de la règle 38 (INST_WHL)
